# rust_ipify

./: README.md
.github/: pull_request_template.md
Rust_ipify_lib/: Cargo.toml  README.md
Rust_ipify_lib/src/: ipify.rs  lib.rs
Rust_ipify_lib_test/: Cargo.toml
Rust_ipify_lib_test/src/: main.rs
