[package]
name = "rust_ipify"
version = "1.0.0"
authors = ["ZigRazor"]
edition = "2018"
license-file = "LICENSE"
description = "A rust client library for ipify"
homepage = "https://github.com/ZigRazor/rust_ipify"
repository = "https://github.com/ZigRazor/rust_ipify"
readme = "README.md"
keywords = ["ipify", "ip","internet", "library"]
categories = ["utilities", "development-tools::cargo-plugins"]
[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }